--- a/views/user_form.pug
+++ b/views/user_form.pug
@@ -7,15 +7,9 @@ block content
     div.form-group
       label(for='username') User:
       input#username.form-control(type='text', placeholder='Krystian etc.' name='username' value=(undefined===user ? '' : user.username))
-    //- div.form-group
-    //-   label(for='password') Password:
-    //-   input#password.form-control(type='text', placeholder='password' name='password' value=(undefined===user ? '' : user.password))
-    //- div.form-group
-    //-   label(for='member') Member:
-    //-   input#member.form-control(type='checkbox', name='member' value=(undefined===user ? '' : user.member))
-    //- div.form-group
-    //-   label(for='admin') Admin:
-    //-   input#admin.form-control(type='checkbox', name='admin' value=(undefined===user ? '' : user.admin))
+    div.form-group
+      label(for='password') Password:
+      input#password.form-control(type='text', placeholder='password' name='password' value=(undefined===user ? '' : user.password))
     button.btn.btn-primary(type='submit') Submit
 
   if errors
