--- a/views/user_form.pug
+++ b/views/user_form.pug
@@ -10,6 +10,9 @@ block content
     div.form-group
       label(for='password') Password:
       input#password.form-control(type='text', placeholder='password' name='password' value=(undefined===user ? '' : user.password))
+    div.form-group
+      label(for='confirmPassword') Confirm Password:
+      input#confirmPassword.form-control(type='text', placeholder='confirm password' name='confirmPassword' value=(undefined===user ? '' : user.confirmPassword))
     button.btn.btn-primary(type='submit') Submit
 
   if errors
