--- a/views/layout.pug
+++ b/views/layout.pug
@@ -33,6 +33,11 @@ html(lang='en')
                 a(href='/catalog/user/create') Create new user
               li
                 a(href='/catalog/message/create') Create new message
+              li
+                hr
+              li
+                a(href='/catalog/joining') Join to the club
+
 
         div(class='col-sm-10')
           block content
