--- a/views/layout.pug
+++ b/views/layout.pug
@@ -37,6 +37,8 @@ html(lang='en')
                 hr
               li
                 a(href='/catalog/joining') Join to the club
+              li
+                a(href='/catalog/login') Log in
 
 
         div(class='col-sm-10')
