--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,13 +32,16 @@ html(lang='en')
               li
                 a(href='/catalog/user/create') Create new user
               li
-                a(href='/catalog/message/create') Create new message
-              li
                 hr
               li
                 a(href='/catalog/joining') Join to the club
               li
                 a(href='/catalog/login') Log in
+              if (user)
+               li
+                hr
+               li
+                a(href='/catalog/message/create') Create new message
 
 
         div(class='col-sm-10')
