--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,6 +36,8 @@ html(lang='en')
               li
                 a(href='/catalog/joining') Join to the club
               li
+                a(href='/catalog/admin') Become ad admin
+              li
                 a(href='/catalog/login') Log in
               if (user)
                li
