--- a/views/index.pug
+++ b/views/index.pug
@@ -20,16 +20,17 @@ block content
       li #[strong Users:] !{data.user_count}
       li #[strong Messages:] !{data.message_count}
   
-  if(user && user.member && messages)
+  if(messages)
    h1 Messages
    each message in messages
     h1= message.title
     p= message.text
-    p #{message.username}
-    p= message.date
-  else if (messages)
-   h1 Messages
-   each message in messages
-    h1= message.title
-    p= message.text
-    
+    div.form-group
+     form(action="" method="POST")
+     input#messageId(type="text", name="messageId", required="true", value=message._id)
+     button(type="submit") Delete 
+    if(user && user.member)
+     p #{message.username}
+     p= message.date
+     if(user.admin)
+      p= message.date
