--- a/views/layout.pug
+++ b/views/layout.pug
@@ -36,7 +36,7 @@ html(lang='en')
               li
                 a(href='/catalog/joining') Join to the club
               li
-                a(href='/catalog/admin') Become ad admin
+                a(href='/catalog/admin') Become an admin
               li
                 a(href='/catalog/login') Log in
               if (user)
