--- a/views/layout.pug
+++ b/views/layout.pug
@@ -44,6 +44,8 @@ html(lang='en')
                 hr
                li
                 a(href='/catalog/message/create') Create new message
+               li
+                a(href='/catalog/log-out') Log out
 
 
         div(class='col-sm-10')
